org.metaborg.lang.tiger.example/tests/binding/binding05.tig
let 
  function f(x : int, x : int) : int = 1 // error: duplicate parameter declaration
in 
   f(1, 2)
end 